<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="OPTIONS">
        <menu>
            <item android:title="@string/home" android:icon="@drawable/ic_baseline_home_24" />
            <item android:title="@string/my_profile" android:icon="@drawable/ic_baseline_person_24" android:id="@+id/myProfile"/>
            <item android:title="@string/my_job_posts" android:icon="@drawable/ic_baseline_list_24" android:id="@+id/myJobPosts"/>
            <item android:title="@string/my_job_requests" android:icon="@drawable/ic_baseline_send_24"/>
            <item android:title="@string/help_and_support" android:icon="@drawable/ic_baseline_help_24"/>
            <item android:title="@string/logout" android:icon="@drawable/ic_baseline_logout_24"/>
        </menu>
    </item>

</menu>